# elpc

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tmp_xkom_search.html  tmp_xkom_search_rendered.html
src/el_price_checker/: cli.py  container_entrypoint.py  db.py  fetch.py  parse.py  runner.py  search.py  settings.py  tui.py  web.py
src/el_price_checker/templates/: base.html  index.html  product.html  tags.html
tests/: test_live_fetch.py  test_parse_offline.py
