[project]
name = "el-price-checker"
version = "0.1.0"
description = "CLI + TUI tool to track electronics prices (PL market)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"httpx[http2]>=0.27",
	"platformdirs>=4.2",
	"rich>=13.7",
	"selectolax>=0.3",
	"textual>=0.76",
	"typer>=0.12",
	"playwright>=1.46",
	"fastapi>=0.115",
	"uvicorn>=0.30",
	"jinja2>=3.1",
	"python-multipart>=0.0.9",
]

[project.scripts]
elpc = "el_price_checker.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/el_price_checker"]
